# yahei-alarm-clock

./: package.json  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
ui/: index.html
ui2/: index.html
