[package]
name = "yahei-alarm-clock"
version = "1.0.0"
description = "极简雅黑桌面闹钟"
authors = ["yourname"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
